can now change preferences for restaurants you have selected

--- a/Explosion/Base.lproj/Main.storyboard
+++ b/Explosion/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell2" textLabel="1dh-1r-8lh" detailTextLabel="z1w-8M-BKh" style="IBUITableViewCellStyleSubtitle" id="Bis-EE-VGq">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell3" textLabel="1dh-1r-8lh" detailTextLabel="z1w-8M-BKh" style="IBUITableViewCellStyleSubtitle" id="Bis-EE-VGq">
                                         <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Bis-EE-VGq" id="it3-u7-JOX">
@@ -354,6 +354,38 @@
                                 <rect key="frame" x="0.0" y="93" width="320" height="426"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="smX-VW-eRY" customClass="FoodTableViewCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="smX-VW-eRY" id="lLf-4c-IKM">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name of the Restaurant" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oKz-zN-V6Q">
+                                                    <rect key="frame" x="20" y="11" width="212" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m8N-qH-kh3">
+                                                    <rect key="frame" x="240" y="7" width="60" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="Meh">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="changeLike:" destination="smX-VW-eRY" eventType="touchUpInside" id="4t5-80-Lxr"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="likeButton" destination="m8N-qH-kh3" id="y8J-lP-dzb"/>
+                                            <outlet property="nameLabel" destination="oKz-zN-V6Q" id="WnY-Ez-FDY"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="MBo-s5-fbR" id="P4Z-B5-SgJ"/>
                                     <outlet property="delegate" destination="MBo-s5-fbR" id="tX5-um-FYb"/>
@@ -371,6 +403,7 @@
                     <tabBarItem key="tabBarItem" title="Item" id="EGa-7R-Ddq"/>
                     <connections>
                         <outlet property="AddFoodButton" destination="Lzl-rS-tfu" id="Wb6-vo-nQv"/>
+                        <outlet property="myTable" destination="a6k-7f-68c" id="2Lg-jT-6Cn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zxo-Ig-sCO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -489,6 +522,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="axO-le-0dx"/>
+        <segue reference="xem-KE-eze"/>
     </inferredMetricsTieBreakers>
 </document>
